[package]
name = "cs165-M1-Rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9.5"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
ctrlc = "3.4.5"

[dev-dependencies]
difference = "2.0.0"
thiserror = "1.0.64"